# axiom2

./: .gitignore  gradle.properties  gradlew  settings.gradle
.github/workflows/: android.yml  codeql.yml  gradle.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ptrace_chroot.c
app/src/main/java/com/alpineterminal/: FileBrowserScreen.kt  FileResourceManager.kt  FileViewModel.kt  GitHubApiService.kt  GitHubManager.kt  GitHubViewModel.kt  LinuxEnvironmentManager.kt  MainActivity.kt  NotificationHelper.kt  NotificationReceiver.kt  PackageInstallerScreen.kt  PackageInstallerViewModel.kt  SettingsManager.kt  SettingsScreen.kt  SshManager.kt  SshScreen.kt  SshViewModel.kt  TerminalScreen.kt  TerminalStateMachine.kt  TerminalViewModel.kt  TextEditorScreen.kt  VoiceInputManager.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/mipmap-xxhdpi/: ic_launcher_round.xml
app/src/main/res/mipmap-xxxhdpi/: ic_launcher.xml
app/src/main/res/raw/: alpine_minirootfs.tgz
gradle/wrapper/: gradle-wrapper.properties
